<resources>
    <string name="app_name">trpp</string>
    <string name="Catalog">Catalog</string>
    <string name="my_cart">My cart</string>
    <string name="buttonPlaceYourOrder">Place Your Order</string>
    <string name="thanks">Thank You!</string>
    <string name="your_payment">Your payment was successful!</string>
    <string name="just_wait">Just wait your custom arrive at home.</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="go_to_orders">Go to orders</string>
    <string name="hello">Hello, Gerasimov Zahar!</string>
    <string name="my_orders">My Orders:</string>
    <string name="addtocart">Add to cart</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="addToCartGoodsPage">Add to cart</string>
</resources>