<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackbackgroud"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/gilroy_semibold"
        android:text="@string/thanks"
        android:textColor="@color/white"
        android:textSize="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/just_wait"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="335dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/your_payment"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/toCatalogFromCongrats"
        android:layout_width="240dp"
        android:layout_height="62dp"
        android:layout_marginTop="450dp"
        android:background="@color/blackbackgroud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/purplekruglie" />

    <TextView
        android:id="@+id/onButtonContinueShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/continue_shopping"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_medium"
        app:layout_constraintBottom_toBottomOf="@+id/toCatalogFromCongrats"
        app:layout_constraintEnd_toEndOf="@+id/toCatalogFromCongrats"
        app:layout_constraintStart_toStartOf="@+id/toCatalogFromCongrats"
        app:layout_constraintTop_toTopOf="@+id/toCatalogFromCongrats" />

    <ImageButton
        android:id="@+id/fromCongratsToProfile"
        android:layout_width="215dp"
        android:layout_height="75dp"
        android:background="@color/blackbackgroud"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toCatalogFromCongrats"
        app:srcCompat="@drawable/blackkruglie" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_orders"
        android:background="@color/blackbackgroud"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_medium"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/fromCongratsToProfile"
        app:layout_constraintEnd_toEndOf="@+id/fromCongratsToProfile"
        app:layout_constraintStart_toStartOf="@+id/fromCongratsToProfile"
        app:layout_constraintTop_toTopOf="@+id/fromCongratsToProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>
